[package]
name = "druid-rustdoc"
version = "0.1.0"
authors = ["Manmeet <manmeetmann2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { path = "../druid/druid", features = ["im", "image"] }
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
pulldown-cmark = "0.8.0"
rustdoc-types = { path = "rustdoc-types" }
syntect = "4.5.0"
lazy_static = "1.4"

# [patch.crates-io]
# piet = { git = "https://github.com/ForLoveOfCats/piet", branch = "PangoWrapping" }
# piet-common = { git = "https://github.com/ForLoveOfCats/piet", branch = "PangoWrapping" }

[patch.'https://github.com/linebender/druid']
druid = { path = "../druid/druid" }
