[package]
name = "rustdoc-types"
version = "0.1.0"
authors = ["Manmeet <manmeetmann2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/Maan2003/druid", branch = "rustdoc-dev", features = ["im", "image"] }
im = { version = "15.0.0", features = ["serde"] }
serde = { version = "1.0.118", features = ["rc", "derive"] }
serde_json = "1.0.61"
